fix landing page party shapes overflow

--- a/assets/css/landingPageBodyMain.css
+++ b/assets/css/landingPageBodyMain.css
@@ -1,17 +1,33 @@
+html {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    /* max-width: 1080px; */
+}
+
 body {
     margin: 0;
     height: 100%;
+    width: 100%;
     overflow-x: hidden;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    /* align-items: center; */
 
+    
 
 
 }
 #main {
-    width: 100%;
+    max-width: 100%;
     /* width: 100vw ; */
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
+    /* max-width: 1080px; */
+    /* margin-left: auto; */
+    /* margin-right: auto; */
 
 }
