--- a/assets/css/landingPageIntro.css
+++ b/assets/css/landingPageIntro.css
@@ -7,10 +7,11 @@
     flex-direction: column;
     background-color: white;
     border-bottom: 1px solid black;
+    overflow: hidden;
     /* position: relative; */
 }
 #party-shapes {
-    position: absolute;
+    /* position: absolute; */
     top: 1362px;
 }
 .intro__c {
@@ -33,6 +34,7 @@
     letter-spacing: -0.36px;
     margin-left: 30px;
     margin-bottom: 12px;
+    margin-top: -40px;
 }
 .intro__c__pitch {
     font-family: "Capsule Sans Text",system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
